temporary view for index page

--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,1 +1,13 @@
-index.html.erb
+<p id="notice"><%= notice %></p>
+
+<h1>Paintings</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Banner url</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+</table>
