--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
         <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
+       <%= render "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
