--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :name %>
     <%= f.input :price %>
     <%= f.input :description %>
-    <%= f.input :photo, as: :file %>
+    <%= #f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
