fixed submit button

--- a/app/views/paintings/new.html.erb
+++ b/app/views/paintings/new.html.erb
@@ -1,5 +1,9 @@
 <h1>Rent out your painting</h1>
 
+<p id="notice"><%= notice %></p>
+
+
 <%= render 'form', painting: @painting %>
-<%= link_to 'Show', @painting %> |
+
+
 <%= link_to 'Back', paintings_path %>
