--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -3,13 +3,14 @@
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :price %>
-    <%= f.input :description %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :name, label: "Painting Name" %>
+    <%= f.input :price, label: "Price (per/day)" %>
+    <%= f.input :description, label: "Describe your Painting"%>
+
+
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit class: "btn btn-primary"%>
   </div>
 <% end %>
