--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -4,6 +4,8 @@
 
   <div class="painting-image">
     <!-- insert cloudinary image -->
+    <%= cl_image_tag("ga0fexdof3lgqcjxddjg",
+      width: 400, height: 300, crop: :fill) %>
   </div>
 
   <div class="right-side">
