--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,9 +2,9 @@
 <div>
 <h1>Rent-a-Pic</h1>
 <h2>Rent-a-pic is a new service that allows you to rent visual arts.</h2>
-<h3>Wanting to impress your in-laws at family dinner ? Why not hanging a Picasso in your living room to create that "waw" effect. </h3>
-<h3>Wanting to display some art but not wanting to have to move it to your future place ? we also offer long term solution</h3>
-<h4>For a day or for a year, trust the power of art in your own home</h4>
+<h3>Wanting to impress your in-laws at family dinner ? Why not hanging a Picasso in your living room to create that "waw" effect! </h3>
+<h3>Wanting to display some art but not wanting to have to move it to your future place ? we also offer long term solution.</h3>
+<h4>For a day or for a year, trust the power of art in your own home.</h4>
 </div>
 
 <% if user_signed_in?%>
