--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-        <p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+        <%= render "shared/navbar" %>
     <%= yield %>
   </body>
 </html>
