--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -7,12 +7,12 @@
 <ul>
   <% @paintings.each do |painting| %>
     <div class="card-trip">
-    <div class="card-trip-infos">
-      <div>
-        <p><%= painting.name %></p>
-        <p><%= painting.description %></p>
-        <p><%= painting.price %></p>
-      </div>
+      <div class="card-trip-infos">
+        <div>
+          <p><%= painting.name %></p>
+          <p><%= painting.description %></p>
+          <p><%= painting.price %></p>
+        </div>
     </div>
   </div>
     <%= link_to 'More details', painting_path(painting), class: "btn btn-primary"%>
@@ -22,4 +22,5 @@
 
 <%= link_to 'Back', paintings_path %>
 
-
+<!--   if painting.photo.attatched? -->
+<!--  cl_image_tag painting.photo.key %> -->
