--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -4,6 +4,7 @@
 
   <div class="form-inputs">
     <%= f.input :name, label: "Painting Name" %>
+    <%= f.input :artist, label: "Painting Artist" %>
     <%= f.input :price, label: "Price (per/day)" %>
     <%= f.input :description, label: "Describe your Painting"%>
 
