added pic thingy

--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :name, label: "Painting Name" %>
     <%= f.input :price, label: "Price (per/day)" %>
     <%= f.input :description, label: "Describe your Painting"%>
+    <%= f.input :photo, as: :file %>
 
 
   </div>
