--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -9,7 +9,7 @@
     <div class="card-trip">
       <div class="card-trip-infos">
         <div>
-          <%= cl_image_tag("ga0fexdof3lgqcjxddjg",
+          <%= cl_image_tag(painting.photo.key,
               width: 400, height: 300, crop: :fill) %>
           <p><%= painting.name %></p>
           <p><%= painting.description %></p>
