--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -1,18 +1,28 @@
-<%= simple_form_for(@painting) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :name, label: "Painting Name" %>
-    <%= f.input :artist, label: "Painting Artist" %>
-    <%= f.input :price, label: "Price (per/day)" %>
-    <%= f.input :description, label: "Describe your Painting"%>
-    <%= f.input :photo, as: :file %>
+<div class="container pt-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-4 col-lg-4">
 
 
+      <%= simple_form_for(@painting) do |f| %>
+        <%= f.error_notification %>
+        <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+
+
+
+      <div class="form-inputs">
+        <%= f.input :name, label: "Painting Name" %>
+        <%= f.input :artist, label: "Painting Artist" %>
+        <%= f.input :price, label: "Price (per/day)" %>
+        <%= f.input :description, label: "Describe your Painting"%>
+        <%= f.input :photo, as: :file %>
+      </div>
+
+      <div class="form-actions">
+        <%= f.submit class: "btn btn-outline-dark btn-lg w-100"%>
+      </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.submit class: "btn btn-primary"%>
-  </div>
-<% end %>
+</div>
