--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,15 @@
   </head>
 
   <body>
+
+  <div class="white">
+
     <%= render "shared/navbar" %>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-    <%= yield %>
+
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+         <%= yield %>
+  </div>
+
   </body>
 </html>
