--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<img src="..app/assets/images/the_kiss.jpg" alt="The Kiss">
+<img src="./app/assets/images/the_kiss.jpg" alt="The Kiss">
 
 
 
