--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -17,7 +17,7 @@
         </div>
     </div>
   </div>
-    <%= link_to 'More details', painting_path(painting), class: "btn btn-primary"%>
+    <%= link_to 'More details', painting_path(painting), class: "btn btn-dark"%>
   <% end %>
 </ul>
 
