home index css cards

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,3 +37,8 @@ background: linear-gradient(to right, #F8F5F5 65%, white 50%);
 .white {
   background: white;
 }
+
+.painting {
+  float: right;
+  margin-right: 0px 0px 0px 30px;
+}
