--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,10 +13,10 @@
       <% end %>
     </div>
 
-<!--     <div class="position">
-      <%= cl_image_tag("m6gmzcwddkwl7ghw6fpu",
-        width: 600, height: 700, crop: :fill) %>
-    </div> -->
+<div class="painting">
+  <%= cl_image_tag("m6gmzcwddkwl7ghw6fpu",
+    width: 600, height: 700, crop: :fill) %>
+</div>
 
   </div>
 </div>
