--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -21,6 +21,6 @@
   </div>
 
 
-  <%= link_to 'Make changes to your booking', edit_booking_path(@booking) %>
+  <%= link_to 'Make changes to your booking', edit_booking_path(@booking) %><br>
   <%= link_to 'Return to your dashboard', dashboard_path %>
 </div>
