--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,18 +6,24 @@
   border-radius: 50px;
 }
 
-.flex-container {
-  display: flex;
-  justify-content: space-between;
+.container-index {
+  width: 900px;
+  margin: auto;
 }
 
 .card-trip {
-  background-size: cover;
-  background-position: center;
-  height: 500px;
-  border-radius: 1px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
   }
+
+.card {
+  width: 200px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  text-align: center;
+  padding: 20px;
+}
 //   display: flex;
 // //   align-items: center;
 //   justify-content: space-around;
