--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,9 +1,11 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Find the right painting for you.</h1>
+<div class="row justify-content-center">
+  <h1>Find the right painting for you.</h1>
+</div>
 
-<div class="flex-container">
+<div class="container-index">
 <ul>
   <% @paintings.each do |painting| %>
     <div class="card-trip">
