--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   padding: 200px 100px;
 }
 .row {
-  padding: 25px 15px;
+  padding: 0px 0px;
 }
 h1 {
   font-family: 'Poppins', sans-serif;
@@ -31,7 +31,7 @@ h3 {
 }
 
 .white_brown {
-background: linear-gradient(to right, #F8F5F5 65%, white 50%);
+ background: linear-gradient(to right, #F8F5F5 65%, white 50%);
 }
 
 .white {
@@ -39,6 +39,7 @@ background: linear-gradient(to right, #F8F5F5 65%, white 50%);
 }
 
 .painting {
-  float: right;
+  // float: right;
   margin-right: 0px 0px 0px 30px;
+  display: flex;
 }
