--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -25,7 +25,9 @@
 </div>
 
 
-<%= link_to 'Back', paintings_path %>
+<div class="row justify-content-center">
+  <%= link_to 'Back', paintings_path %>
+</div>
 
 
 
