--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to dashboard_path, class: "navbar-brand" do %>
-    <%= image_tag "https://www.canva.com/design/DAENzADzpYk/b425Ne6bW_5CrWnkvwXUHw/view?utm_content=DAENzADzpYk&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" %>
+    <%= image_tag "https://i.postimg.cc/YSK95H23/Rentapaintinglogo.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
