--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -18,7 +18,7 @@
           <p><%= @painting.description %></p>
 
           <h3>Price</h3>
-          <p><%= @painting.price %> £ per day</p>
+          <p> £ <%= @painting.price %>per day</p>
         </div>
 
         <%= link_to 'Back', paintings_path, class: "btn btn-light" %>
