--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,11 +5,19 @@
 UPCOMING BOOKINGS
 <div class= "upcoming-bookings">
   <% if user_signed_in? %>
-    <% @bookings.each do |booking|  %>
-      <%= cl_image_tag(booking.painting.photo.key,
-      width: 400, height: 300, crop: :fill) %>
-      <p><%= booking.painting.name %></p>
-      <p><%= booking.start_date %> until <%= booking.end_date %> </p>
+    <% if @user.bookings.present? == false %>
+      <p>You do not have any bookings yet!</p>
+      <%= link_to 'View paintings here', paintings_path %><br>
+
+    <% else %>
+      <% @bookings.each do |booking|  %>
+        <%= cl_image_tag(booking.painting.photo.key,
+        width: 400, height: 300, crop: :fill) %>
+        <p><%= booking.painting.name %></p>
+        <p><%= booking.start_date %> until <%= booking.end_date %> </p>
+        <%= link_to 'View Details', booking_path(booking) %><br>
+
+       <% end %>
     <% end %>
   <% end %>
 </div>
