--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -7,29 +7,44 @@
   border-radius: 50px;
 }
 
-.container-index {
-  width: 900px;
-  margin: auto;
+.cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
 }
 
-.card-trip {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 50px;
-  }
-
-.card {
-  width: 200px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  text-align: center;
-  padding: 20px;
+.cards {
+  border-radius: 6px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  background-color: rgba(239, 239, 239, 1);
+  transition: background-color 0.2s;
 }
-//   display: flex;
-// //   align-items: center;
-//   justify-content: space-around;
-//   font-size: 22px;
-//   color: white;
-//   font-weight: bolder;
-//   text-shadow: 0 0 10px rgba(0,0,0,0.7);
- // }
+
+.card:hover {
+  background-color: lightgrey;
+}
+
+
+.card-title {
+  color: rgb(0,0,0);
+}
+
+.card-text {
+  color: rgb(0,0,0);
+}
+
+#card_add {
+
+}
+
+#img_card_add {
+  opacity: 0.5;
+}
+
+.plus {
+  font-size: 60px;
+  color: rgb(0,0,0);
+  position: absolute;
+  top: 25%;
+  left: 40%;
+}
