--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <%= link_to dashboard_path, class: "navbar-brand" do %>
-    <%= image_tag "https://i.postimg.cc/YSK95H23/Rentapaintinglogo.png" %>
+    <%= image_tag "https://i.postimg.cc/9FBzVwkn/logorentap.png" %>
   <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,12 +16,12 @@
       <li class="nav-item">
         <%= link_to "Add your painting", new_painting_path, class: "nav-link" %>
       </li>
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <%= link_to "User", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <%= link_to "Action", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
 </div>
