--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,19 +13,19 @@
     <div class="main-header">
           UPCOMING BOOKINGS
       <div class= "upcoming-bookings">
-        <% if user_signed_in? %>
-          <% if @user.bookings.present? == false %>
-            <p>You do not have any bookings yet!</p>
-            <%= link_to 'View paintings here', paintings_path %><br>
-            <% @bookings.each do |booking|  %>
-             <% if booking.painting.photo.attached? %>
+        <% if user_signed_in? && @user.bookings.present? %>
+          <% @bookings.each do |booking|  %>
+            <% if booking.painting.photo.attached? %>
               <%= cl_image_tag(booking.painting.photo.key,
               width: 400, height: 300, crop: :fill) %>
-              <% end %>
-              <p><%= booking.painting.name %></p>
-              <p><%= booking.start_date %> until <%= booking.end_date %> </p>
             <% end %>
+            <p><%= booking.painting.name %></p>
+            <p><%= booking.start_date %> until <%= booking.end_date %> </p>
+            <%= link_to 'View Details', booking_path(booking)%><br>
           <% end %>
+        <% else %>
+          <p>You do not have any bookings yet!</p>
+          <%= link_to 'Browse paintings for rent', paintings_path %><br>
         <% end %>
       </div>
     </div>
