--- a/app/views/paintings/show.html.erb
+++ b/app/views/paintings/show.html.erb
@@ -20,11 +20,24 @@
           <p><%= @painting.description %></p>
 
           <h3>Price</h3>
-          <p> £ <%= @painting.price %>per day</p>
+          <p> £ <%= @painting.price %> /per day</p>
         </div>
 
+        <% if @painting.user == current_user %>
+          <% @bookings.each do |booking| %>
+            <p>Your booking requests:</p>
+            <%= booking.status %>
+            <%= button_to "Approve booking", booking_path(booking) %>
+           <% end %>
+          <%= link_to 'Edit your listing', edit_painting_path(@painting.bookings), class: "btn btn-dark" %>
+          <%= link_to 'Delete your listing', painting_path(@painting), class: "btn btn-dark", method: :delete, data: { confirm: "Are you sure you wish to delete your listing?" }  %>
+        <% elsif user_signed_in? && !@painting.user %>
+          <%= link_to 'Book', new_painting_booking_path(@painting), class: "btn btn-dark" %>
+        <% end %>
+
+
+
         <%= link_to 'Back', paintings_path, class: "btn btn-light" %>
-        <%= link_to 'Book', new_painting_booking_path(@painting), class: "btn btn-dark" %>
       </div>
 
   </div>
