--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,14 +1,19 @@
-<%= simple_form_for model, method: verb, url: url do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :start_date, label: "Start Date" %>
-    <%= f.input :end_date, label: "End date" %>
-  </div>
 
-   <div class="form-actions">
-    <%= f.submit class: "btn btn-primary"%>
-  </div>
+    <%= simple_form_for model, method: verb, url: url do |f| %>
+      <%= f.error_notification %>
+      <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<% end %>
+      <div class="form-inputs">
+        <%= f.input :start_date, label: "Start Date" %>
+        <%= f.input :end_date, label: "End date" %>
+      </div>
+
+          <div class="form-actions">
+            <%= f.submit class: "btn btn-outline-dark  w-70"%>
+          </div>
+
+
+    <% end %>
+
+
