added name to users

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,6 +6,8 @@
   <main class="main">
 
     <div class="main-header">
+      <h1>Hi <%= @user.first_name %>!</h1>
+
       <h6>Your bookings</h6>
     </div>
 
