--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
-  <h1>Booking Confirmation</h1>
+  <h1>Your Booking Information</h1>
 
 
   <div class="booking-details">
-    <p><%= @booking.status %></p>
     <p>You have booked <%= @painting.name %></p>
+    <p><%= @booking.status %> - awaiting approval from <%= @user.first_name %></p>
     <p>For the period of <%= @booking.start_date %> to <%= @booking.end_date %></p>
   </div>
 
@@ -14,15 +14,10 @@
       width: 400, height: 300, crop: :fill) %>
   </div>
 
-  <div class="painting-details">
-    <p><%= @painting.artist %></p>
-    <p>You have booked <%= @painting.name %></p>
-    <p>For the period of <%= @booking.start_date %> to <%= @booking.end_date %></p>
-  </div>
-
+<!-- removed painting details class/div
+ -->
 
   <%= link_to 'Make changes to your booking', edit_booking_path(@booking) %><br>
-  <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" } %>
-
+  <%= link_to 'Cancel my booking', booking_path(@booking), method: :delete, data: { confirm: "Are you sure you wish to cancel your booking?" } %> <br>
   <%= link_to 'Return to your dashboard', dashboard_path %>
 </div>
