--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -14,6 +14,7 @@
         <%= f.input :artist, label: "Painting Artist" %>
         <%= f.input :price, label: "Price (per/day)" %>
         <%= f.input :description, label: "Describe your Painting"%>
+        <%= f.input :address, label: "Painting Location" %>
         <%= f.input :photo, as: :file %>
       </div>
 
