--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -9,6 +9,12 @@
 
   <div class="card-container d-flex">
 
+  <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+
+  </div>
 
       <ul>
         <div class="cards">
