--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -30,7 +30,8 @@
                     <h6><%= painting.name %></h6>
                   </div>
                   <p><%= painting.description %></p>
-                  <h6>£<%= painting.price %></h6>
+                  <p><%= painting.address %></p>
+                  <h6> £<%= painting.price %> /per day</h6>
               </div>
             </div>
             <div class="row justify-content-center">
