--- a/app/views/paintings/_form.html.erb
+++ b/app/views/paintings/_form.html.erb
@@ -1,13 +1,9 @@
 <div class="container pt-5">
   <div class="row justify-content-center">
 
-
-      <%= simple_form_for(@painting) do |f| %>
+      <%= simple_form_for model, method: verb, url: url do |f| %>
         <%= f.error_notification %>
         <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-
-
 
       <div class="form-inputs">
         <%= f.input :name, label: "Painting Name" %>
