--- a/app/views/paintings/index.html.erb
+++ b/app/views/paintings/index.html.erb
@@ -1,6 +1,3 @@
-
-<p id="notice"><%= notice %></p>
-
 <div class="row justify-content-center">
   <h1>Find the right painting for you.</h1>
 </div>
@@ -37,6 +34,10 @@
             <div class="row justify-content-center">
               <%= link_to 'More details', painting_path(painting), class: "btn btn-dark"%>
             </div>
+
+             <% if @painting.user == current_user %>
+              <p>This is your listing</p>
+            <% end %>
         </div>
          <% end %>
         </div>
