--- a/app/views/paintings/new.html.erb
+++ b/app/views/paintings/new.html.erb
@@ -5,8 +5,7 @@
 
 <p id="notice"><%= notice %></p>
 
-
-<%= render 'form', painting: @painting %>
+<%= render partial: 'paintings/form', locals: {model: @painting, url: paintings_path, verb: :post} %>
 
 <div class="row justify-content-center">
   <%= link_to 'Back', paintings_path %>
